# conan-packages

./: .gitignore  export-all.ps1  export-all.sh
CGAL/: CMakeLists.txt  conanfile.py
Eigen3/: conanfile.py
GeographicLib/: CMakeLists.txt  conanfile.py
HinnantDate/: conanfile.py
LuxCore/: conanfile.py
LuxCore/test_package/: conanfile.py
Qt/: conanfile.py
Triangle/: CMakeLists.txt  conanfile.py
Vulkan-Headers/: conanfile.py
Vulkan-Hpp/: conanfile.py
Vulkan-Loader/: conanfile.py
boost/: conanfile.py
carve/: CMakeLists.txt  conanfile.py
cycles/: CMakeLists.txt  conanfile.py
embree/: conanfile.py
expat/: conanfile.py
fmt/: conanfile.py
gdal/: conanfile.py
glbinding/: conanfile.py
glfw/: build.py  conanfile.py
glfw/test_package/: conanfile.py  test_package.cpp
kde_frameworks/kf5_conan_helper/: conanfile.py
libigl/: CMakeLists.txt  conanfile.py
libjpeg-turbo/: CMakeLists.txt  conanfile.py
libodb/: CMakeLists.txt  conanfile.py  config.h.in  odbConfig.cmake
libodb-psql/: CMakeLists.txt  conanfile.py  config.h.in
libodb-sqlite/: CMakeLists.txt  conanfile.py  config.h.in
libosmium/: CMakeLists.txt  conanfile.py
libpq/: CMakeLists.txt  conanfile.py
libtiff/: CMakeLists.txt  FindTIFF.cmake  conanfile.py
llfio/: CMakeLists.txt  conandata.yml  conanfile.py
ntkernel-error-category/: CMakeLists.txt  conandata.yml  conanfile.py
oiio/: CMakeLists.txt  conanfile.py
oiio/test_package/: conanfile.py  example.cpp
openjdk/: conanfile.py
openmesh/: conanfile.py
outcome/: CMakeLists.txt  conandata.yml  conanfile.py
pbrt/: build.py  cmake_patch.patch  conanfile.py  openexr_cmake_patch.patch
poco/: CMakeLists.txt  conanfile.py
proj/: CMakeLists.txt  conanfile.py
python/: 0001-Static-library.patch  0005-Fix-DefaultWindowsSDKVersion.patch  conanfile.py
quickcpplib/: 0001_remove_thirdparty_headers.patch  CMakeLists.txt  conandata.yml  conanfile.py
robin-map/: CMakeLists.txt  conanfile.py
sqlite3/: CMakeLists.txt  conanfile.py
sqlpp11/: CMakeLists.txt  conanbuildinfo.cmake  conanfile.py  conaninfo.txt
sqlpp11-connector-sqlite3/: CMakeLists.txt  conanfile.py
testing/: conanfile.txt
tools/templates/: conanfile_cmake.py.ms
